<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A237E"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="135dp"
        android:layout_height="61dp"
        android:layout_marginStart="260dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="80dp"
        android:background="#FFFFFF"
        android:text="@string/CreateAccount"
        android:textColor="#1A237E"
        android:textColorHighlight="#1A237E"
        android:textColorHint="#1A237E"
        android:textColorLink="#1A237E"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:text="Create Account" />

    <Button
        android:id="@+id/SignIn"
        android:layout_width="135dp"
        android:layout_height="61dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="80dp"
        android:background="#FFFFFF"
        android:text="@string/sign_in"
        android:textColor="#1A237E"
        android:textColorHighlight="#1A237E"
        android:textColorHint="#1A237E"
        android:textColorLink="#1A237E"
        android:textIsSelectable="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:text="Sign In" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="378dp"
        android:layout_height="516dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/kitchen_companion_logo"
        app:layout_constraintBottom_toTopOf="@+id/SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/kitchen_companion_4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@drawable/welcome_2" />

</androidx.constraintlayout.widget.ConstraintLayout>





