<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A237E"
    tools:context=".createAccountActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="240dp"
        android:layout_height="233dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="482dp"
        android:background="#1A237E"
        android:contentDescription="@string/todo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/kitchen_companion_4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="125dp"
        android:layout_height="44dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="421dp"
        android:text="@string/first_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="219dp"
        android:layout_height="39dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="406dp"
        android:autofillHints="Enter First Name"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="122dp"
        android:layout_height="47dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="349dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="219dp"
        android:layout_height="39dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="326dp"
        android:autofillHints="Enter Username"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="52dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="262dp"
        android:text="@string/new_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="216dp"
        android:layout_height="40dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="243dp"
        android:autofillHints="Enter Password"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="324dp"
        android:layout_marginBottom="179dp"
        android:text="@string/new_email"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.676" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="157dp"
        android:autofillHints="Enter Email"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="93dp"
        android:background="#1A237E"
        android:text="@string/create_account"
        android:textColor="#1A237E"
        android:textSize="20sp"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>