<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".signInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="734dp"
        android:background="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="122dp"
            android:layout_height="42dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.352"
            tools:text="Email" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="46dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="290dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="Password" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="212dp"
            android:layout_height="49dp"
            android:layout_marginEnd="14dp"
            android:autofillHints="Enter Valid password"
            android:background="#F8F4F4"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
            tools:ignore="LabelFor"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="212dp"
            android:layout_height="49dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="115dp"
            android:autofillHints="Enter Email Address"
            android:background="#EDE7E7"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="LabelFor"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="301dp"
            android:layout_height="192dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="55dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
            app:srcCompat="@drawable/signin_1"
            android:contentDescription="@string/kichen_companion_sign_in_logo" />

        <Button
            android:id="@+id/button"
            android:layout_width="120dp"
            android:layout_height="58dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="167dp"
            android:layout_marginBottom="156dp"
            android:background="#F1EEEE"
            android:text="@string/SignIn"
            android:textColor="#1A237E"
            android:textColorHighlight="#1A237E"
            android:textColorHint="#1A237E"
            android:textColorLink="#1A237E"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
            tools:text="Sign In" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>